Ensure compositing test preference overrides are reset between tests

Layouttests in the compositing/ directory override the default
preferences to enable accelerated 2d canvas and enable mock
scrollbars[1]. These preferences were not reset properly so tests
following the compositing test could run with the compositing overrides.

This patch forces preferences to be reset before every test.

This flakiness was observable on the bots where tests would flakily
fail with incorrect scrollbars:
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=compositing%2Flayers-inside-overflow-scroll.html&showExpectations=true

To reproduce this bug reliably, run:
run-webkit-tests compositing/animation/state-at-end-event-transform-layer.html fast/canvas/canvas-render-layer.html --additional-driver-flag=--enable-slimming-paint-v2 --child-processes=1
which will fail. Running the tests individually passes.

[1] https://cs.chromium.org/chromium/src/content/shell/browser/layout_test/blink_test_controller.cc?l=369

BUG=633707,627798,634685

Review-Url: https://codereview.chromium.org/2208603004
Cr-Commit-Position: refs/heads/master@{#410485}

Former-commit-id: a5191dca2b309396a7743816917f19d037ebc39a